Resize jump arrow & stop background script

--- a/style/loading.css
+++ b/style/loading.css
@@ -35,7 +35,7 @@
 .loader {
     position: absolute;
     z-index: 1002;
-    width: 25vw;
+    width: 15vw;
 }
 
 .loading-section {
